       NEW FEATURE: stable sorting of track view. This allows you, for
       example, to first sort by title, then by artist. The list will
       then be sorted by artist, but all titles of each artist remain
       sorted as well (before the tiles were random).
       Arbitrary depth and order of stable sorting is possible by
       clicking the sort columns in the desired order.

gtkpod V0.93.1
       BUGFIX: When changing the mountpoint, the change was not
       written to the preferences file correctly.

       BUGFIX: 'Copy from iPod' just failed in offline mode instead of
       giving meaningful error messages -> fixed.

       IMPROVEMENT: 'Copy from iPod' is not 'Export from Database' and
       allows to export from the local database as well. This is
       useful if you want to rename files in a consistant manner.

gtkpod V0.93
	Complete rewrite of reading/writing the iTunesDB. The code for
	reading and writing the iTunesDB (and other iPod/Shuffle
	files) is completely self-contained (itdb*.[ch]) and can
	easily be used in other projects.

	NEW FEATURE: Support of 'local database' containing tracks on
	local harddisk. The contents of the local hard disk can be
	browsed in the known gtkpod-fashion: by artist or genre or
	album etc. Tracks and entire playlists can be dragged over to
	the iPod or Shuffle database. By using smart playlists with
	defined size in MBytes, the Shuffle can be filled effectively.

	Drag and drop also works in the opposite direction: drag
	tracks or entire playlists from the iPod/Shuffle database into
	your local database. If necessary, the tracks are copied to
	your harddisk automatically.

	NEW FEATURE: sync-abook.sh and sync-webcalendar.sh scripts
	provided by Daniel Kercher.

	NEW FEATURE: sync-thunderbird.sh script	provided by Clinton
	Gormley.

	IMPROVEMENT: support MP3 disc numbers (thanks to Leigh Dyer)

	IMPROVEMENT: Use of GTK filechoosers instead of fileselectors
	(thanks to James Ligget)
